Fix code examples overflow

--- a/src/assets/less/components/content.less
+++ b/src/assets/less/components/content.less
@@ -1,143 +1,145 @@
 .content {
     flex: 1;
-	margin: 0 auto;
-	max-width: @content-width;
-	padding: 1rem;
+    margin: 0 auto;
+    max-width: @content-width;
+    padding: 1rem;
+    width: 100%;
+    box-sizing: border-box;
 
-	@media @screen--wide {
-		padding: 1rem 3rem;
-	}
+    @media @screen--wide {
+        padding: 1rem 3rem;
+    }
 
-	a {
-		text-decoration: underline;
-		text-decoration-color: @font-color--link-content-line;
-		text-decoration-skip-ink: auto; // It is a default value, but why not - https://www.chromestatus.com/feature/5631679087509504
-	}
+    a {
+        text-decoration: underline;
+        text-decoration-color: @font-color--link-content-line;
+        text-decoration-skip-ink: auto; // It is a default value, but why not - https://www.chromestatus.com/feature/5631679087509504
+    }
 
-	& p:last-of-type {
-		margin-bottom: 0;
-	}
+    & p:last-of-type {
+        margin-bottom: 0;
+    }
 }
 
 .post {
-	&__description {
-		font-size: 1.3rem;
-		line-height: 2rem;
-		color: @color-supplementary;
-	}
+    &__description {
+        font-size: 1.3rem;
+        line-height: 2rem;
+        color: @color-supplementary;
+    }
 
-	&__meta {
-		font-size: 0.7rem;
-		text-transform: uppercase;
-		color: @font-color--light;
-		padding: 0;
-		list-style: none;
+    &__meta {
+        font-size: 0.7rem;
+        text-transform: uppercase;
+        color: @font-color--light;
+        padding: 0;
+        list-style: none;
 
-		&--detail {
-			text-align: center;
-		}
+        &--detail {
+            text-align: center;
+        }
 
-		&-item {
-			display: inline-block;
+        &-item {
+            display: inline-block;
 
-			&:not(:first-child):before {
-				color: @color-supplementary;
-				content: '•'; // &#149; bullet
-			}
-		}
-	}
+            &:not(:first-child):before {
+                color: @color-supplementary;
+                content: '•'; // &#149; bullet
+            }
+        }
+    }
 
-	&__signature {
-		margin: 1rem 0 2em;
-		font-size: 1.1rem;
-		text-align: right;
+    &__signature {
+        margin: 1rem 0 2em;
+        font-size: 1.1rem;
+        text-align: right;
 
-		&::before {
-			content: '\2014\00A0';
-		}
-	}
+        &::before {
+            content: '\2014\00A0';
+        }
+    }
 
-	&__sources {
-		background-color: @bg-color--side;
-		border-bottom: 1px solid @color-base2;
+    &__sources {
+        background-color: @bg-color--side;
+        border-bottom: 1px solid @color-base2;
 
-		&-list {
-			padding: 0;
-			list-style: none;
-		}
-	}
+        &-list {
+            padding: 0;
+            list-style: none;
+        }
+    }
 
-	&__social {
-		#buttons {
-			align-items: center;
-			background-color: @bg-color--side;
-			display: flex;
-			font-size: 0.7em;
-			justify-content: center;
-		}
+    &__social {
+        #buttons {
+            align-items: center;
+            background-color: @bg-color--side;
+            display: flex;
+            font-size: 0.7em;
+            justify-content: center;
+        }
 
-		&-button {
-			background: none;
-			border: 1px solid @font-color--link-content-line;
-			color: @color-supplementary;
-			text-transform: uppercase;
-			font-weight: bold;
-			flex: 1 0 0;
+        &-button {
+            background: none;
+            border: 1px solid @font-color--link-content-line;
+            color: @color-supplementary;
+            text-transform: uppercase;
+            font-weight: bold;
+            flex: 1 0 0;
 
-			@media @screen--small {
-				flex: 150px 0 0;
-			}
+            @media @screen--small {
+                flex: 150px 0 0;
+            }
 
-			&:hover {
-				color: inherit;
-			}
-		}
+            &:hover {
+                color: inherit;
+            }
+        }
 
-		&-share-text {
-			flex: 1 0 0;
-			text-indent: 0.5em;
-			display: none;
+        &-share-text {
+            flex: 1 0 0;
+            text-indent: 0.5em;
+            display: none;
 
-			@media @screen--small {
-				display: inherit;
-			}
-		}
-	}
+            @media @screen--small {
+                display: inherit;
+            }
+        }
+    }
 }
 
 .feeds {
-	margin-top: @padding--basic;
+    margin-top: @padding--basic;
 
-	@media @screen--small {
-		column-count: 2;
-	}
+    @media @screen--small {
+        column-count: 2;
+    }
 
-	&__category {
-		@media @screen--small {
-			display: inline-block;
-		}
-	}
+    &__category {
+        @media @screen--small {
+            display: inline-block;
+        }
+    }
 
-	&__category-title {
-		margin-top: 0;
-	}
+    &__category-title {
+        margin-top: 0;
+    }
 
-	&__list {
-		list-style: none;
-		padding: 0;
-	}
+    &__list {
+        list-style: none;
+        padding: 0;
+    }
 
-	&__rss {
-		background-color: @bg-color--side;
-		display: inline-block;
-		margin-right: 0.5em;
-		padding: 0 5px;
-		text-decoration: none !important;
-	}
+    &__rss {
+        background-color: @bg-color--side;
+        display: inline-block;
+        margin-right: 0.5em;
+        padding: 0 5px;
+        text-decoration: none !important;
+    }
 }
 
 #disqus_thread {
-	margin-top: 1em;
+    margin-top: 1em;
 }
 
 .note {
