--- a/src/assets/less/variables.less
+++ b/src/assets/less/variables.less
@@ -28,13 +28,13 @@
 
 // fonts
 @font-families: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-	'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
 @font-size--small: 18px;
 @font-size--wide: 20px;
 
 // vars
-@content-width: 800px;
+@content-width: 920px;
 @content-line-width: 10px;
 
 @padding--basic: 1rem;
